Cambios en los titulos

--- a/views/lpe/admin/indexAdmin.twig
+++ b/views/lpe/admin/indexAdmin.twig
@@ -1,7 +1,7 @@
 {% extends "lpe/master.twig" %}
  {% block linkhead %}
 <link rel="stylesheet" href="{{ baseUrl() }}/assets-lpe/css/sceditor/sceditor-main.css"> {% endblock %}
-{# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
+{# ----------------------------------------------------------- #} {% block titulo %}Administración{% endblock %} {% block body %}
 <div class="container" style=" ">
     <div class="row">
         {% set paginaAdmin = 1 %} {% include '/lpe/admin/listaSecciones.twig' %}
