--- a/views/lpe/admin/subirImagenes.twig
+++ b/views/lpe/admin/subirImagenes.twig
@@ -1,4 +1,4 @@
-{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
+{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Imagenes{% endblock %} {% block body %}
 <div class="container" style=" ">
     <div class="row">
         {% set paginaAdmin = 4 %} {% include '/lpe/admin/listaSecciones.twig' %}
