--- a/views/lpe/contenido/opinion/crear.twig
+++ b/views/lpe/contenido/opinion/crear.twig
@@ -1,5 +1,5 @@
 {% extends "lpe/master.twig" %} {% block linkhead %}
-<link rel="stylesheet" href="{{ baseUrl() }}/assets-lpe/css/sceditor/sceditor-main.css"> {% endblock %} {# ----------------------------------------------------------- #} {% block titulo %}Crear derecho{% endblock
+<link rel="stylesheet" href="{{ baseUrl() }}/assets-lpe/css/sceditor/sceditor-main.css"> {% endblock %} {# ----------------------------------------------------------- #} {% block titulo %}Crear opinion{% endblock
 %} {% block body %}
 <form action="{{ urlFor('runCrearOpinion') }}" method="POST">
 <article>
