--- a/views/lpe/registro/login-static.twig
+++ b/views/lpe/registro/login-static.twig
@@ -6,7 +6,7 @@
 <div class="container">
 	<div class="row">
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			<h2><strong>Iniciar sesión</strong></h2>
+			<h2><strong>INICIAR SESION</strong></h2>
 			<p>Inicie sesion para poder participar</p>
 			<div class="well well-lg">
 				<form action="{{ urlFor('runLogin') }}" method="POST" class="form-horizontal">
