--- a/views/lpe/registro/registro-exito.twig
+++ b/views/lpe/registro/registro-exito.twig
@@ -6,7 +6,7 @@
 <div class="container">
 	<div class="row">
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			<h2><strong>Verifique su correo electronico</strong></h2>
+			<h2><strong>VERIFIQUE SU CORREO ELECTRÓNICO</strong></h2>
 			<p>Antes de comenzar, es necesario que <b>verifique su direccion de correo electrónico</b>. Para ello, le hemos enviado a su dirección de email <b>{{ email }}</b> un correo para realizar la verificación de su cuenta.</p>
 			<p>Le pedimos que ingrese a su email y realice la verificación. Una vez hecho, ya podrá comenzar a utilizar el portal.</p>
 						<a href="{{ urlFor('shwPortal') }}" class="button large negative radius"><i class="fa fa-sign-in fa-fw"></i> Volver al portal</a>
