--- a/views/lpe/registro/reiniciar-completo.twig
+++ b/views/lpe/registro/reiniciar-completo.twig
@@ -6,7 +6,7 @@
 <div class="container">
 	<div class="row">
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			<h2><strong>Tu contraseña fue reiniciada</strong></h2>
+			<h2><strong>SU CONTRASEÑA FUE REINICIADA</strong></h2>
 			<p>Puede volver a la plataforma iniciando sesión con su nueva contraseña.</p>
 			<a href="{{ urlFor('shwLogin') }}" class="btn btn-primary">Iniciar sesión</a>
 		</div>
