--- a/views/lpe/registro/validar-correo.twig
+++ b/views/lpe/registro/validar-correo.twig
@@ -1,17 +1,17 @@
 {% extends "lpe/master.twig" %} 
 {# ----------------------------------------------------------- #} 
-{% block titulo %}Contraseña reiniciada{% endblock %} 
+{% block titulo %}Validar email{% endblock %} 
 {% block body %}
 
 <div class="container">
 	<div class="row">
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
 			{% if usuarioValido == true %}
-					<h2><strong>Su email ha sido verificado</strong></h2>
+					<h2><strong>SU EMAIL HA SIDO VERIFICADO</strong></h2>
 			<p>Puede volver a la plataforma iniciando sesión con su nueva contraseña.</p>
 									<a href="{{ urlFor('shwLogin') }}" class="btn btn-primary">Iniciar sesión</a>
 					{% else %}
-		<h2><strong>Link de verificación invalido</strong></h2>
+		<h2><strong>LINK DE VERIFICACIÓN</strong></h2>
 			<p>El link ingresado es incorrecto. Verifique que el link que hemos enviado a su dirección de correo electrónico sea el mismo que ingresó en la barra de direcciones.</p>
 			<p>Si sigue viendo este mensaje, comuníquese con un administrador.</p>
 						<a href="{{ urlFor('shwPortal') }}" class="btn btn-link">Volver</a>
