--- a/views/lpe/contenido/evento/listar.twig
+++ b/views/lpe/contenido/evento/listar.twig
@@ -1,4 +1,4 @@
-{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
+{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Cronograma{% endblock %} {% block body %}
 <div class="container" style=" ">
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1">
