--- a/views/lpe/contenido/static/propuesta.twig
+++ b/views/lpe/contenido/static/propuesta.twig
@@ -1,4 +1,4 @@
-{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
+{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Propuesta{% endblock %} {% block body %}
 <div class="container" style=" ">
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
