--- a/views/lpe/registro/recuperar-clave.twig
+++ b/views/lpe/registro/recuperar-clave.twig
@@ -6,8 +6,8 @@
 <div class="container">
 	<div class="row">
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			<h2><strong>Revise su casilla</strong></h2>
-			<p>Le hemos enviado a su email un link para que reincie tu contraseña.
+			<h2><strong>REVISE SU EMAIL</strong></h2>
+			<p>Le hemos enviado a su email un link para que reinicie su contraseña.
 						Recuerde que este link expira en una hora. En caso de no utilizarlo,
 						siempre podrá generar otra desde la opción de recuperar contraseña.</p>
 						<a href="{{ urlFor('shwPortal') }}" class="btn btn-link">Volver</a>
