--- a/views/lpe/registro/reiniciar-clave.twig
+++ b/views/lpe/registro/reiniciar-clave.twig
@@ -6,7 +6,7 @@
 <div class="container">
 	<div class="row">
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
-			<h2><strong>Reiniciar contraseña</strong></h2>
+			<h2><strong>REINICIAR CONTRASEÑA</strong></h2>
 			<div class="well well-lg">
 				<form action="{{ urlFor('runReiniciarClave',{'idUsu': idUsu,'token': token}) }}" method="POST" class="form-horizontal" data-toggle="validator">
 					<fieldset>
