--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -9,9 +9,9 @@
     {% block opengraph %}
     		<meta property="og:url"                content="{{ baseUrl() }}" />
 <meta property="og:type"               content="website" />
-<meta property="og:title"              content="Nueva Ley Provincial de Educacion" />
-<meta property="og:description"        content="Aqui va una descripcion del portal" />
-<meta property="og:image"              content="{{ baseUrl() }}/assets/img/" />
+<meta property="og:title"              content="Ley de Educación de Santa Fe" />
+<meta property="og:description"        content="Santa Fe Construye Educación y Futuro. Diálogos para la ley provincial de educación. Un espacio de debate amplio, profundo y diverso, en clave de derecho, sobre la educación que la sociedad santafesina necesita." />
+<meta property="og:image"              content="{{ baseUrl() }}/assets-lpe/img/sharer.png" />
     {% endblock %}
 <link rel="shortcut icon" href="{{ baseUrl() }}/assets-lpe/img/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="{{ baseUrl() }}/assets-lpe/img/favicon.ico" type="image/x-icon">
