--- a/views/lpe/portal/inicio.twig
+++ b/views/lpe/portal/inicio.twig
@@ -21,7 +21,7 @@
                                     <h6>{{ derecho.titulo }}</h6> {% set numComents = 0 %} {% for seccion in derecho.secciones %} {% set numComents = numComents + seccion.comentarios|length %} {% endfor %}
                                 </div>
                                 <figcaption>
-                                    ¡Participá! <i class="zmdi zmdi-thumb-up zmdi-hc-lg zmdi-hc-fw"></i>
+                                    ¡Participá! <i class="fa fa-hand-paper-o fa-lg fa-fw"></i>
                                 </figcaption>
                             </figure>
                         </div>
