--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -3,6 +3,7 @@
 @import "lpe/bootswatch";
 @import "../css/materialdesignicons.css";
 @import "../css/material-design-iconic-font.css";
+@import "../css/font-awesome.css";
 @import 'https://fonts.googleapis.com/css?family=Slabo+27px';
 @import 'https://www.santafe.gob.ar/assets/standard/css/fonts.css';
 
@@ -41,6 +42,7 @@
 //     font-weight: 300;
 //     font-style: normal;
 // }
+
 
 
 * {
@@ -206,13 +208,14 @@ figure:hover figcaption {
 }
 
 figure:before {
-    content: "?";
+    content: '\f256';
+    font-family: 'FontAwesome';
     position: absolute;
     font-weight: 800;
     background: black;
     background: rgba(255, 255, 255, 0.75);
     text-shadow: 0 0 5px white;
-    color: black;
+    color: #444;
     width: 24px;
     height: 24px;
     -webkit-border-radius: 12px;
