--- a/views/lpe/admin/subirImagenes.twig
+++ b/views/lpe/admin/subirImagenes.twig
@@ -22,6 +22,23 @@
                                 <input type="text" class="form-control" readonly style="padding-left:10px">
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="control-label"><strong>Asociar</strong> <em>Si la imagen es el banner del home o de algun bloque, seleccionelo. Sino, deje "Sin Asociar"</em></label>
+        <select name="asociar" class="form-control">
+          <option value="no">Sin asociar</option>
+          <option value="banner">Banner de página de Inicio</option>
+          <option value="1">Derecho 1 - Bloque</option>
+          <option value="2">Derecho 2 - Bloque</option>
+          <option value="3">Derecho 3 - Bloque</option>
+          <option value="4">Derecho 4 - Bloque</option>
+          <option value="5">Derecho 5 - Bloque</option>
+          <option value="6">Derecho 6 - Bloque</option>
+          <option value="7">Derecho 7 - Bloque</option>
+          <option value="8">Derecho 8 - Bloque</option>
+          <option value="9">Derecho 9 - Bloque</option>
+          <option value="10">Derecho 10 - Bloque</option>
+        </select>
+      </div>
                         <div class="form-group text-right">
                             <button type="submit" class="btn btn-success">Subir imagen</button>
                         </div>
