--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -29,7 +29,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Piwik -->
-<!--<script type="text/javascript">
+<script type="text/javascript">
   var _paq = _paq || [];
   _paq.push(["setDomains", ["*.www.santafe.gov.ar/leyeducacion"]]);
   _paq.push(['trackPageView']);
@@ -42,7 +42,7 @@
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="//westad.santafe.gov.ar/piwik.php?idsite=31" style="border:0;" alt="" /></p></noscript>-->
+<noscript><p><img src="//westad.santafe.gov.ar/piwik.php?idsite=31" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 </head>
 
@@ -69,18 +69,6 @@
                             <li><a href="{{ urlFor('shwProp') }}">Propuesta</a></li>
                             <li><a href="{{ urlFor('shwAnteced') }}">Antecedentes</a></li>
                             <li><a href="{{urlFor('shwListaEvento')}}">Cronograma</a></li>
-                            <!--<li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>-->
                         </ul>
                         
                         <ul class="nav navbar-nav navbar-right">
