--- a/views/lpe/portal/inicio.twig
+++ b/views/lpe/portal/inicio.twig
@@ -2,10 +2,10 @@
 <div class="container-fluid" style="margin-bottom:40px">
     <div class="row">
         <div class="col-xs-12 col-md-7 col-md-offset-1 text-center">
-            <h2 style="text-transform: uppercase"><strong>{{ titulo }}</strong></h2>
+            <!--<h2 style="text-transform: uppercase"><strong>{{ titulo }}</strong></h2>
             <div style="font-size: 14px;line-height: 21px;">
                 {{ intro|bbCode }}
-            </div>
+            </div>-->
             {% set linkImagen = baseUrl() ~ '/img/banner.jpg' %}
             <img src="{{linkImagen}}" style="width:100%; margin-top:20px" alt="">
             <div id="derechos" class="" style="margin-top:40px">
